Prepare for Render deployment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 @layer base {
     body {
         background-color: #fcfbfc;
-        overflow-y: hidden;
+        /* overflow-y: hidden; */
     }
 }
 
